# lamide

./: LICENSE.md  README.md
graph_map_lamide/graph_localization_lamide/: CHANGELOG.rst  CMakeLists.txt  Tutorial.md  package.xml
graph_map_lamide/graph_localization_lamide/launch/: 2d_mcl_oru_lab.launch  2d_mcl_oru_lab_lamide.launch  3d_mcl_lamide.launch  3d_mcl_ncfm2018.launch  kitti_loc.launch  localization_arla.launch  mcl_params.launch  oxford_lifelong.launch  oxford_loc.launch  oxford_loc_filter.launch  oxford_loc_histogram.launch  parking_lot_loc.launch  visualize.launch
graph_map_lamide/graph_localization_lamide/rviz/: citi1_orkla.rviz  citi2_orkla.rviz  citi4.rviz  localization_arla.rviz  localization_ncfm2018.rviz
graph_map_lamide/graph_localization_lamide/scripts/: graph_offline_mcl_arla2012  graph_offline_mcl_orkla  test_pose_queue
graph_map_lamide/graph_localization_lamide/src/: LocalisationHeatMap.cpp  graph_localization_lamide_node.cpp  graph_localization_lamide_node2.cpp  graph_localization_lamide_offline.cpp  localization_factory.cpp  localization_type.cpp  ndt_mcl_localization.cpp  pose_queue.cpp  realtime_localization.cpp
graph_map_lamide/graph_localization_lamide/test/: test_localization.cpp  ukf_test.cpp
graph_map_lamide/graph_map_custom_msgs_lamide/: CMakeLists.txt  package.xml
graph_map_lamide/graph_map_custom_msgs_lamide/msg/: FactorMsg.msg  GraphMap.msg  GraphMapMsg.msg  NodeMsg.msg
graph_map_lamide/graph_map_custom_msgs_lamide/srv/: GetGraphMap.srv  NNDataSaver.srv  NNPose.srv
graph_map_lamide/graph_map_lamide/: CHANGELOG.rst  CMakeLists.txt  Readme.md  Tutorial.md  docs.config  package.xml
graph_map_lamide/graph_map_lamide/config/: velo32.yaml
graph_map_lamide/graph_map_lamide/data/: keepme
graph_map_lamide/graph_map_lamide/launch/: 3d_fuser_ncfm2018.launch  3d_fuser_shopping_mall.launch  VelodyneConvertMotionCompensation.launch  kitti_fuser.launch  kitti_fuser_gt.launch  kitti_fuser_gt_bak.launch  lamide_visualize_graph_fuser.launch  old_kitti_fuser.launch  old_kitti_fuser_gt.launch  oxford_fuser.launch  oxford_fuser_gt.launch  oxford_fuser_gt_filter.launch  oxford_fuser_gt_static.launch  parking_lot_fuser.launch  testGraph.launch  visualize.launch  visualize_graph_fuser.launch
graph_map_lamide/graph_map_lamide/maps/: keepme
graph_map_lamide/graph_map_lamide/rviz/: lcas.rviz  mapping_arla2012.rviz  mapping_arla_2012.rviz  mapping_demo.rviz  mapping_oru_lab.rviz  ncfm.rviz  odometry_visualization.rviz  optimize_graph.rviz  showMap-rgb.rviz  showMap.rviz
graph_map_lamide/graph_map_lamide/scripts/: coop_projection_demo  graph_offline_mapping_arla2012  graph_offline_mapping_arla2012_save_raw_clouds  graph_offline_mapping_coop2013  graph_simulation_demo
graph_map_lamide/graph_map_lamide/src/: VelodyneMotionCompensation.cpp  graph_map_lamide_fuser.cpp  graph_map_lamide_fuser_node.cpp  graph_map_lamide_publisher.cpp  graph_map_lamide_server.cpp  graph_mapping_lamide_offline.cpp  graphfactory.cpp  ndt_map_publisher_mcl_test.cpp  optimize_graph.cpp  show_map.cpp  test_integration.cpp  test_polar_ndt.cpp  utils.cpp
graph_map_lamide/graph_map_lamide/test/: test_graph.cpp  test_grid.cpp  test_particle_filter.cpp  test_point_curv.cpp  test_serialization.cpp  test_simple.cpp
ndt_core_lamide/ndt_core_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_core_lamide/ndt_generic_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_core_lamide/ndt_generic_lamide/src/: eigen_utils.cpp  io.cpp  labels.cpp  math_utils.cpp  motion_model_3d.cpp  ndt_utils.cpp  pcl_utils.cpp  sensors_utils.cpp  utils.cpp
ndt_core_lamide/ndt_generic_lamide/test/: eigen_test.cpp
ndt_core_lamide/ndt_registration_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_core_lamide/ndt_registration_lamide/src/: ndt_matcher_d2d.cpp  ndt_matcher_d2d_2d.cpp  ndt_matcher_d2d_feature.cpp  ndt_matcher_d2d_lamide.cpp  ndt_matcher_d2d_n.cpp  ndt_matcher_d2d_n_sc.cpp  ndt_matcher_d2d_sc.cpp  ndt_matcher_d2d_sc_2d.cpp  ndt_matcher_p2d.cpp
ndt_core_lamide/ndt_registration_lamide/test/: batchTestRangerAccuracy.cc  check_reg.cc  convert.cc  deathmatch.cc  feature_registration.cc  from_jff.cc  narf_extraction.cc  narf_registration.cc  ndt_feature_test.cc  ndt_histogram_registration.cc  ndt_matcher_node.cc  ndt_registration_test.cc  p2d_deathmatch.cc  reconstruct.cc  simple.cc  test_covariance.cc  test_ndt_mapper.cc
ndt_core_lamide/ndt_rviz_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
ndt_core_lamide/ndt_rviz_lamide/src/: ndt_display.cpp  ndt_line_display.cpp  ndt_line_visual.cpp  ndt_rgb_display.cpp  ndt_rviz_lamide.cpp  ndt_vector_display.cpp  ndt_visual.cpp  utils.cpp
ndt_tools_lamide/ndt_localization_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_tools_lamide/ndt_localization_lamide/src/: ndt_map_publisher_lamide.cpp  ndt_mcl_localization_filter_lamide.cpp  ndt_mcl_localization_lamide.cpp
ndt_tools_lamide/ndt_offline_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_tools_lamide/ndt_offline_lamide/src/: bag_converter.cpp  bag_file_view.cpp  fuser3d_offline.cpp  gps_test.cpp  imu_prediction.cpp  mcl_offline.cpp  narf_test.cpp  ndt_offline_gt_lamide.cpp  ndt_offline_laser_lamide.cpp  ndt_offline_laser_noodom_lamide.cpp  ndt_offline_pointcloud_lamide.cpp  readpointcloud.cpp  tf_writer.cpp  tf_writer_from_txt.cpp  view_ndtmap.cpp
ndt_tools_lamide/ndt_tools_lamide/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne_pointcloud_oru/: CHANGELOG.rst  CMakeLists.txt  nodelets.xml  package.xml
velodyne_pointcloud_oru/cfg/: CloudNode.cfg  TransformNode.cfg
velodyne_pointcloud_oru/launch/: VLP16_points.launch
velodyne_pointcloud_oru/src/lib/: rawdata.cc  (+2 more)
velodyne_pointcloud_oru/tests/: CMakeLists.txt  cloud_node_32e_hz.test  cloud_node_64e_s2.1_hz.test  cloud_node_hz.test  cloud_node_vlp16_hz.test  cloud_nodelet_32e_hz.test  cloud_nodelet_64e_s2.1_hz.test  cloud_nodelet_hz.test  cloud_nodelet_vlp16_hz.test  test_calibration.cpp  transform_node_hz.test  transform_nodelet_hz.test  two_nodelet_managers.test
(+874 files in other folders)
