<?xml version="1.0"?>
<package format="2">

  <name>graph_map_custom_msgs_lamide</name>
  <version>0.0.0</version>


  <description>The graph_map_custom_msgs_lamide package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="daniel@todo.todo">daniel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>genmsg</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>velodyne_msgs</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>ndt_map_lamide</build_depend>
<build_depend>velodyne_pointcloud_oru</build_depend>

<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>genmsg</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>velodyne_msgs</build_export_depend>
<build_export_depend>pcl_ros</build_export_depend>
<build_export_depend>ndt_map_lamide</build_export_depend>
<build_export_depend>velodyne_pointcloud_oru</build_export_depend>




<exec_depend>message_runtime</exec_depend>
<exec_depend>pcl_ros</exec_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>genmsg</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>velodyne_msgs</exec_depend>
<exec_depend>velodyne_msgs</exec_depend>
<exec_depend>velodyne_pointcloud_oru</exec_depend>
<exec_depend>ndt_map_lamide</exec_depend>








  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
