<?xml version="1.0"?>
<package>
<name>ndt_offline_lamide</name>
<version>2.0.3</version>
<description>The ndt_offline_lamide package</description>

<maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
<maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
<author>Henrik Andreasson</author>

<license>CC BY-SA 4.0</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>ndt_fuser_lamide</build_depend>
<build_depend>ndt_map_lamide</build_depend>
<build_depend>ndt_localization_lamide</build_depend>
<build_depend>ndt_registration_lamide</build_depend>
<build_depend>ndt_visualisation_lamide</build_depend>
<build_depend>ndt_generic_lamide</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>velodyne_msgs</build_depend>
<build_depend>velodyne_pointcloud</build_depend>
<build_depend>tf_conversions</build_depend>
<build_depend>eigen_conversions</build_depend>
<build_depend>tf</build_depend>
<build_depend>genmsg</build_depend>
<build_depend>ndt_localization_lamide</build_depend>
<build_depend>ndt_rviz_lamide</build_depend>


<run_depend>ndt_fuser_lamide</run_depend>
<run_depend>ndt_map_lamide</run_depend>
<run_depend>ndt_localization_lamide</run_depend>
<run_depend>ndt_registration_lamide</run_depend>
<run_depend>ndt_visualisation_lamide</run_depend>
<run_depend>ndt_generic_lamide</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>velodyne_msgs</run_depend>
<run_depend>velodyne_pointcloud</run_depend>
<run_depend>tf_conversions</run_depend>
<run_depend>eigen_conversions</run_depend>
<run_depend>tf</run_depend>
<run_depend>ndt_localization_lamide</run_depend>
<run_depend>genmsg</run_depend>
<run_depend>ndt_rviz_lamide</run_depend>

<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- Other tools can request additional information be placed here -->
<cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include"/>
</export>
</package>
