<?xml version="1.0"?>
<package format="2">
  <name>ndt_tools_lamide</name>
  <version>2.0.3</version>
  <description>The ndt_tools_lamide package</description>

  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>
  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="martin.magnusson@oru.se">Martin Magnusson</maintainer>

  <license>CC BY-SA 4.0</license>

  <author>Henrik Andreasson</author>
  <author>Todor Stoyanov</author>
  <author>Jari Saarinen</author>
  <author>Tomasz Kucner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- exec_depend>ndt_calibration_lamide</exec_depend -->
  <exec_depend>ndt_feature_finder_lamide</exec_depend>
  <exec_depend>ndt_localization_lamide</exec_depend>
  <exec_depend>ndt_offline_lamide</exec_depend>
  <exec_depend>ndt_fuser_lamide</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
